# data-platform-intelligence

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile.api  check_chat.py  docker-compose.dev.yml  docker-compose.yml  final_check.py  pyproject.toml
backend/.github/workflows/: ci.yml
backend/docs/: api-design.md  chatbot-architecture.md  data-model.md  environment-config.md  high-level-architecture.md  ingestion-manual-runbook.md  operations-runbook.md  repo-structure.md  source-catalog.md  technology-stack.md  todos.md
backend/docs/phases/: 00-docs-finalization.md  01-bootstrap-storage.md  02-ingestion.md  03-transformation.md  04-orchestration.md  05-intelligence.md  06-hardening.md  07-expand.md
backend/idp/: __init__.py
backend/idp/core/: __init__.py  config.py  logging.py  models.py
backend/idp/ingestion/: __init__.py  base.py
backend/idp/ingestion/connectors/: __init__.py
backend/idp/ingestion/services/: __init__.py  minio.py
backend/idp/orchestration/: __init__.py  dag_utils.py
backend/idp/transform/: __init__.py  export.py
backend/infra/docker/airflow/: Dockerfile  Dockerfile.optimized  entrypoint.sh  requirements.txt
backend/infra/nginx/: nginx.conf
backend/infra/scripts/: backup_minio.sh  backup_pg.sh  health_check.sh  init-postgres.sql  minio-init.sh  restore_pg.sh  setup_rbac.sh
backend/services/ai/: tasks.py
backend/services/api/: main.py
backend/services/shared/: config.py  database.py  logging.py
backend/tests/: test_api.py  test_rag_logic.py
backend/transform/dbt/: dbt_project.yml  profiles.yml
(+66 files in other folders)
