[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idp"
version = "0.1.0"
description = "Intelligent Data Platform — medallion-architecture data pipeline"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "boto3>=1.37",
    "wbgapi>=1.0.0",
    "duckdb>=1.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi[standard]>=0.111.0",
    "structlog>=24.0",
    "asyncpg>=0.29.0",
    "elasticsearch>=8.13.0",
    "neo4j>=5.20.0",
    "google-genai>=0.1.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
ingest-world-bank = "idp.ingestion.connectors.world_bank.connector:main"
ingest-world-bank-docs = "idp.ingestion.connectors.world_bank_docs.connector:main"
export-gold = "idp.transform.export:main"
serve = "services.api.main:start"

[tool.setuptools.packages.find]
where = ["."]
include = ["idp*", "services*"]
